--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,10 @@
     {
       "path": "/api/cron/check-deadlines",
       "schedule": "0 9 * * *"
+    },
+    {
+      "path": "/api/cron/send-weekly-activity-email",
+      "schedule": "0 21 * * *"
     }
   ]
 }
